# ytreza_builder

./: .gitignore  README.md  mypy.ini  pyproject.toml
sample/documentation/streamlit/: streamlit.md
sample/python/gitignore/: .gitignore.sample
sample/python/streamlit/: main.py.sample
src/: __init__.py  action_plan.py  command.py  command_handler.py  command_handler_port.py  copy_sample_command_handler.py  main.py  python_project_builder.py  system_file_os.py
src/package_manager/: pipenv.py  poetry.py
src/package_test_manager/: pytest.py
src/sample_choice/: with_failing_test.py  with_git_ignore.py  with_mypy.py
src/ytreza_builder/: __init__.py  action_plan.py  command.py  command_handler.py  command_handler_port.py  copy_sample_command_handler.py  project_builder.py  python_project_builder.py  system_file_port.py
test/: __init__.py  base_test_any_step.py  conftest.py  python_project_builder.py  system_file_for_test.py  system_file_os.py  test_command_handler.py  test_copy_sample_command_handler.py  test_poetry.py  test_pytest.py  test_python_builder.py  test_system_file_os.py
test/python/: test_python_builder.py
test/test_deploy_choice_step/: test_deploy_streamlit_with_scalingo.py
test/test_package_manager/: base_test_package_manager_choice.py  test_pipenv.py  test_poetry.py
test/test_package_manager_step/: base_test_package_manager_choice.py  test_pipenv.py  test_poetry.py
test/test_sample_choice_step/: test_failling_test.py  test_git_ignore.py  test_mypy.py  test_streamlit.py
test/test_test_manager_step/: test_pytest.py
(+27 files in other folders)
